overflow fix

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -4,6 +4,7 @@ html,body,#root{
     justify-items: center;
     align-content: center;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .desktop-login-main-container {
